[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocksdb = "0.21.0"
beacon = "0.2.0"
thiserror = "*"
flume = "*"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0.99"